(fixed) dropdown box on z-index

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -300,7 +300,7 @@ header > .outer {
   right: 0;
   background: #fff;
   border: 3px solid #f6f4ee;
-  z-index: 1;
+  z-index: 10;
 }
 .nav-dropdown ul {
   list-style-type: none;
